[package]
name = "nu-tracker"
version = "0.1.0"
edition = "2021"

[lib]
name = "ntlib"
path = "src/lib.rs"

[build-dependencies]
regex = "1.8.3"

[dependencies]
chrono = "0.4.26"
clap = { version = "4.2.7", features = ["derive", "wrap_help"] }
comfy-table = "6.2.0"
etcetera = "0.8.0"
once_cell = "1.19.0"
open = "4.1.0"
paste = "1.0.12"
regex = "1.8.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
struct-field-names-as-array = "0.3.0"
strum_macros = "0.26.1"
thiserror = "1.0.57"
